# gsoap-onvif-cmake

./: CMakeLists.txt  main.cpp
plugin/: CMakeLists.txt
proxycpp/: CMakeLists.txt
